--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav id="menu"> 
     <center>
   <ul>
-     <li> <a href="Glorioso.html"> Glorioso </a> </li>
+     <li> <a href="index.html"> Glorioso </a> </li>
      <li> <a href="formulario.html"> formulario do Glorioso</a> </li>
      <li> <a href="Sociocamisa7.html"> sóciocamisa7 </a> </li>
      <li> <a href="diversos.html"> diversos </a> </li>
